fix: code improvements